# scrapy_first

./: LICENSE  README.md  pyproject.toml  requirements.txt  tutorial.txt
bookscraper-src/: chartadata.sqlite3
bookscraper-src/bookscraper/: database.py  debug.py  items.py  pipelines.py  settings.py
bookscraper-src/bookscraper/spiders/: bookspider.py  chartaspider.py  quotespider.py  quotespider_alternative.py  stackof.py
bookscraper-src/bookscraper/utils/: scrollscript.js
