[tool.poetry]
name = "scrapy-first"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scrapy = "^2.11.1"
ipython = "^8.21.0"
sqlalchemy = "^2.0.27"
scrapy-xlsx = "^0.1.1"
scrapy-playwright = "^0.0.34"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
